src/css/custom.css
/* ... */
.body1Footer{
  font-family: 'Gotham',Lato, sans-serif;
  color: white;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  font-size: 19px;
  letter-spacing: -0.05px;
  line-height: 25px;
  text-align: justify;
}

.linkFooter{
  font-family: 'Gotham',Lato, sans-serif;
  color: white;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  font-size: 19px;
  letter-spacing: -0.05px;
  line-height: 25px;
  text-align: justify;
}

.linkFooter:hover{
  color: #5484b3;
  text-decoration: none;
}

/*Home*/

.mainContainer{
  overflow-x: hidden;
}

.containerSec{
  max-width: var(--ifm-container-width);
  margin: 0 auto;
  display: flex;
  width: 1100px;
  justify-content: center;
  padding: 0;
}

.containerGray{
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: #F8F8F8;
}

.containerBlack{
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: black;
}

.containerWithBackground{
  background-image: url("https://eoscostarica.io/img/blureoslogo.png");
  background-repeat: no-repeat;
  background-position: right center;
  background-size: 100%;
}

.content{
  width: 960px;
  display: flex;
}

.bgParallax{
  width: 100vw;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  height: 780px;
}

.bgParallaxSecondary{
  width: 100vw;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  height: 1750px;
}

.bgParallaxSecondaryCompany{
  width: 100vw;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  height: 1650px;
}

.imgParallax{
  z-index: 1;
  height: 100%;
  width: 100vw;
  background-image: url("https://eoscostarica.io/img/blureoslogo.png");
  background-repeat: no-repeat;
  background-position: right bottom;
}

.titleBox{
  margin-bottom: 3rem;
}

.h3Box{
  margin-bottom: 2rem;
}

.buttonBox{
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.buttonBoxMobile{
  margin-top: 50px;
  width: 100%; 
  display: flex;
  justify-content: center;
}

.sectionHero{
  width: 1100px;
  height: 780px;
  padding-top: 250px;
}

.sectionHeroMobile{
  position: relative;
  padding-top: 120px;
  padding-bottom: 0px;
  width: 100%;
}

.sectionContact{
  width: 1100px;
  padding-top: 250px;
}

.logoMobileBox{
  width: 100%;
  display: flex;
  margin-bottom: 2em;
  -webkit-justify-content: center;
  justify-content: center;
}

.logoMobile{
  width: 300px;
  height: 110px;
}

.section{
  padding-bottom: 140px;
  width: 1100px;
}

.sectionNoPadding{
  width: 1100px;
}

.sectionPadding{
  padding-top: 140px;
  padding-bottom: 140px;
  width: 1100px;
}

.accordion{
  width: 100%;
  background-color: #f1f1f1;
  border: none;
  margin: 0;
  padding: 0;
  box-shadow: none;
}

.MuiAccordion-root::before{
  background-color: #f1f1f1;
  margin: 0;
  padding: 0;
}

.imgBox{
  display: flex;
  justify-content: center;
  height: 350px;
  margin-bottom: 3rem;
}

.imgBoxServices{
  display: flex;
  justify-content: center;
  height: 250px;
}

.imgBoxLogos{
  display: flex;
  align-items: center;
  justify-content:center;
  height: 288px;
  
}

.oneGroupLogo{
  transition: all .4s ease-in-out
}

.oneGroupLogo:hover{
  transform: scale(1.2);
}

.spacingBox{
  margin-bottom: 3rem;
}

.topSpacingBox{
  margin-top: 3rem;
}

.doubleSpacingBox{
  margin-top: 6rem;
  margin-bottom: 6rem;
}

.inquiereBox{
  display: flex;
  align-items: center;
  height: 500px;
}

.imgBoxRight{
  display: flex;
  justify-content: flex-end;
}

.imgBoxLeft{
  display: flex;
  justify-content: flex-start;
}

.imgKnow{
  width: 90%;
}

.imgProjects{
  width: 85%;
}


/*services*/

.centerBox{
  display: flex;
  justify-content: center;
  align-items: center;
}

/*Team*/

.avatarBox{
  display: flex;
  justify-content: center;
  height: 250px;
  margin-bottom: 3rem;
}

.nameText{
  text-align: left;
  margin-bottom: 5px;
}

.positionText{
  text-align: left;
  font-weight: normal;
  margin-bottom: 15px;
}

.bioText{
  text-align: left;
}

.socialMediaBox{
  display: flex;
  justify-content: start;
  margin-top: 15px;
}

.socialMediaIcon{
  cursor: pointer;
  color: #5484b3;
  margin-right: 15px;
}

/* Contact */
.contactFormBox{
  margin-bottom: 3rem;
}

.titleDevs1{
  margin-top: 30px;
  margin-left: 20px
}

.titleDevs2{
  margin-top: 60px;
  margin-left: -66px
}

.titleBlog{
  margin-top: 30px;
  margin-left: 40px
}

.titleGit1{
  margin-top: 30px;
  margin-left: 40px
}

.titleGit2{
  margin-top: 60px;
  margin-left: -50px
}

.topSpacingBoxIcons{
  margin-top: 3rem;
}

.paddingTopGrid{
  padding-top: 100px
}

.displayLine{
  display: none
}

.littleImage{
  width: 150px;
  height: 170px;
  flex: 0 0 auto;
  margin: 1px;
}

.imageIndrustries{
  width: 150px;
  height: 220px;
  flex: 0 0 auto;
}

.imageIndrustriesLogistics{
  width: 250px;
  height: 220px;
  flex: 0 0 auto;
}

.reduceMarginBottom
{
  height: 1120px;
}

.reduceMarginTop
{
  margin-top: -100px
}

.reduceDobleMarginTop
{
  margin-top: -200px
}

.reduceMediumMarginTop
{
  margin-top: -35px
}

.specialButton{
  width: 100%;
}

.imgBoxTheCompany{
  display: flex;
  justify-content: center;
  height: 100px;
  margin-bottom: 2rem;
}

.sizeImageTheCompany{
  width: 300px;
  height: 100px;
}

.centerText{
  text-align: center;
}
/* ... */

